# PriceScraper

./: README.md  pyproject.toml
src/pricescraper/: Products.csv  __init__.py
